minor fix on footer icon spacing

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -102,8 +102,8 @@
     height: 10vw;
     display: flex;
     align-items: flex-end;
-    width: 12.5%;
-    margin: 2%;
+    width: 14.5%;
+    margin: 1%;
   }
 
   .footer .footer--contact {
